fixed an error in sensitiveMode so that the shade[] array gets cleared every time the sensitive Mode button is clicked. This makes the mode fully reset each time

--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@ function clearBoard() {
 //THIS IS TO KEEP TRACK OF SHADE VALUES FOR SENSITIVE MODE
 let shade = []
 function shadeArray() {
+    shade = []
     for (i = 0; i < squareTotal; i++) {
         shade.push(100);
     }
